Nodematerial keyframes get deleted in wrong material #40108

Closed
opened 2014-05-09 11:42:42 +02:00 by Clemens Rudolph · 11 comments

System Information
Win7, 2 x GeForce GTX 580

Blender Version
Broken: (example: 2.7 1464316 )
Worked: 2.70

Short description of errornode_material.blend

When you delete keyframes of copyed material, the keyframes get deleted in the original material.

Exact steps for others to reproduce the error
Based on a (as simple as possible) attached .blend file with minimum amount of steps

  • Select cube 2
  • Make a new material out of the material from cube 1 (make single user)
  • Delete key frames of the mix shader
  • Check material "1" --> no keyframes
**System Information** Win7, 2 x GeForce GTX 580 **Blender Version** Broken: (example: 2.7 1464316 ) Worked: 2.70 **Short description of error**[node_material.blend](https://archive.blender.org/developer/F87992/node_material.blend) When you delete keyframes of copyed material, the keyframes get deleted in the original material. **Exact steps for others to reproduce the error** Based on a (as simple as possible) attached .blend file with minimum amount of steps - Select cube 2 - Make a new material out of the material from cube 1 (make single user) - Delete key frames of the mix shader - Check material "1" --> no keyframes

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @ClemensRudolph

Added subscriber: @ClemensRudolph

Why can I not edit my own bugreport? Od do I miss something?

Why can I not edit my own bugreport? Od do I miss something?

Added subscriber: @willi-2

Added subscriber: @willi-2

"make single user" copies all properties, including the link to the action. A deep copy is not created. I think this is by design at the moment. I don't see an option in the UI to also create copies of the linked actions. However, the actual problem I see is that the UI doesn't seem to offer an option to "make single user" for the linked action.
I'd more call it undesirable behavior than a bug.

"make single user" copies all properties, including the link to the action. A deep copy is not created. I think this is by design at the moment. I don't see an option in the UI to also create copies of the linked actions. However, the actual problem I see is that the UI doesn't seem to offer an option to "make single user" for the linked action. I'd more call it undesirable behavior than a bug.

But in 2.70 it is ok!

But in 2.70 it is ok!

Oh, ok... you are right. :-/ Then the design obviously changed. Curious what a dev will say about this.

Oh, ok... you are right. :-/ Then the design obviously changed. Curious what a dev will say about this.

This issue was referenced by blender/blender-addons-contrib@6f71491d61

This issue was referenced by blender/blender-addons-contrib@6f71491d61d5d99954b23b5b240f031055da602e

This issue was referenced by 6f71491d61

This issue was referenced by 6f71491d61d5d99954b23b5b240f031055da602e
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

Closed by commit 6f71491d61.

Closed by commit 6f71491d61.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#40108
No description provided.