source/blender/blenkernel/intern/node.c
@@ -1123,7 +1123,7 @@ static bNodeTree *ntreeCopyTree_internal(bNodeTree *ntree, Main *bmain, bool do_
 		newtree = BKE_libblock_copy(&ntree->id);
 	}
 	else {
-		newtree = BKE_libblock_copy_nolib(&ntree->id);
+		newtree = BKE_libblock_copy_nolib(&ntree->id, true);
 		newtree->id.lib = NULL;	/* same as owning datablock id.lib */
 	}
 
